<resources>
    <string name="app_name">Sunshine</string>
    <string name="listview_title">Weather Forecast</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_del">DEL</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Menu -->
    <string name="action_settings">Settings</string>
    <string name="refresh">Refresh</string>
    <string name="menu_share_title">Share Weather</string>
    <string name="menu_share_label">Share Weather</string>
    <!-- Strings related to Settings -->

    <!-- General settings -->
    <string name="pref_location_label">Location</string>
    <string name="pref_location_key" translatable="false">Location</string>
    <string name="pref_location_default" translatable="false">10018</string>

    <string name="pref_header_general">General</string>
    <string name="pref_units_label">Units</string>
    <string-array name="pref_units_list_titles">
        <item>F°</item>
        <item>C°</item>
    </string-array>
    <string-array name="pref_units_list_values">
        <item>1</item>
        <item>0</item>
    </string-array>
    <string name="pref_units_key">Units</string>
    <string name="pref_units_default_imperial">1</string>


    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- Location Settings -->
    <string name="pref_location_button_title">Get Location</string>
    <string name="pref_location_finder_label" translatable="false">Get Location</string>
    <string name="pref_location_finder_key" translatable="false">Get Location</string>
    <string name="pref_location_finder_summary">Find your preferred weather location on the map</string>

    <string name="content_authority">com.shc_group.sunshine.app</string>
    <string name="pref_units_metric">C</string>
    <string name="pref_units_imperial">F</string>
</resources>
